--- a/searx/settings.yml
+++ b/searx/settings.yml
@@ -537,7 +537,7 @@ engines:
   - name: bing
     engine: bing
     shortcut: bi
-    disabled: true
+    disabled: false
 
   - name: bing images
     engine: bing_images
@@ -846,7 +846,7 @@ engines:
   - name: apple maps
     engine: apple_maps
     shortcut: apm
-    disabled: true
+    disabled: false
     timeout: 5.0
 
   - name: emojipedia
