--- a/searx/settings.yml
+++ b/searx/settings.yml
@@ -420,7 +420,7 @@ engines:
   - name: bing
     engine: bing
     shortcut: bi
-    disabled: true
+    disabled: false
 
   - name: bing images
     engine: bing_images
@@ -708,7 +708,7 @@ engines:
   - name: apple maps
     engine: apple_maps
     shortcut: apm
-    disabled: true
+    disabled: false
     timeout: 5.0
 
   - name: emojipedia
@@ -1831,7 +1831,7 @@ engines:
   - name: yahoo
     engine: yahoo
     shortcut: yh
-    disabled: true
+    disabled: false
 
   - name: yahoo news
     engine: yahoo_news
@@ -2351,6 +2351,20 @@ engines:
   #   categories: [general, web]
   #   brave_category: goggles
   #   Goggles: # required! This should be a URL ending in .goggle
+
+  - name: nominatim
+    engine: http
+    shortcut: nom
+    weight: 1
+    base_url: "https://nominatim.openstreetmap.org/search"
+    method: "GET"
+    query: "q"
+    params:
+      format: "json"
+      addressdetails: "1"
+      limit: "10"
+    timeout: 10
+
 
   - name: lib.rs
     shortcut: lrs
